packages/react/src/styles/body.scss
@import "variables";
@import "fonts";

body {
  background: rgb(248, 248, 250);
  color: rgb(0, 0, 0);
  font-family: "Open Sans", sans-serif;
  font-size: 0.875rem;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  letter-spacing: 0.025rem;
  margin: 0;
  padding: 0;
}

:host {
  color: rgb(0, 0, 0);
  font-family: "Open Sans", sans-serif;
  font-size: 0.875rem;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  letter-spacing: 0.025rem;
}

button {
  /* stylelint-disable property-no-vendor-prefix */
  -moz-appearance: none;
  -webkit-appearance: none;
  /* stylelint-enable property-no-vendor-prefix */
  appearance: none;
  background-color: transparent;
  border: none;
  margin: 0;
  padding: 0;
}

